# GameA

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
src/: main.cpp
